[package]
name = "neon-json"
version = "0.1.0"
authors = ["Enioluwa Segun <enioluwasegun@gmail.com>"]
license = "MIT"
build = "build.rs"

[lib]
name = "neon_json"
crate-type = ["dylib"]

[build-dependencies]
neon-build = "0.1.23"


[dependencies]
neon = "0.1.23"
neon-serde = "0.0.3"
serde_json = "1.0.19"